--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 # Useless dirs
 __pycache__
 Project\ Outputs
-Project\ Logs
 Project Outputs for*
+Project\ Logs
+Project Logs*
 History
+__Previews
+
+*.SchDocPreview
+
+# order folders
+eurocircuits
